Corrected logic of overlapping styles, closed event listeners on window close, added header to the page

--- a/editor.css
+++ b/editor.css
@@ -30,12 +30,20 @@
 }
 
 .icon {
-    color: black;
+    color: brown;
     font-size: 40px !important;
     padding: 5px;
 }
 
 .buttons {
-    padding-top: 3%;
+    padding-top: 2%;
     padding-left: 40%;
+}
+
+.text-editor {
+    align-items: center;
+    text-align: center;
+    font-weight: bold;
+    font-size: x-large;
+    padding-top: 1%;
 }
